# make_spec_iamge

./: .env.example  .gitignore  CLAUDE.md  Claude_PJ.md  README.md  config.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: test-pitch.md
.devcontainer/: Dockerfile  devcontainer.json
Docs/: ADKマルチエージェントシステム構築ガイド.md  Python PPTX 導入と使い方ガイド.md  agent_architecture.md  evaluation-axes.md  make_spec_iamge_20262306.yml  spec.md  ペラ1企画書作成ガイド作成依頼.md  改善案202603010219.md  改善案202603011753.md  改善案202603012257.md  改善案TODO_202603011753.md  改善案_企画書品質向上.md  現状の問題点202603010200.md  総合得点検討.md
Docs/Steering/: 202602280000_fix-quality-issues.md  202603010000_add-no-image-option.md  202603010000_update-architecture-doc.md  202603012257_improvement-proposal.md  202603060330_improvement-12items.md  202603062317_improvement-plan-quality.md  202603062330_improve-pitch-quality-diversity.md  202603070320_add-pitch-evaluator.md  202603070400_evaluation-analysis.md  202603070400_improve-evaluation-axes.md  202603070645_fix-evaluator-dataflow.md  202603080035_pitch-evaluation-analysis.md  202603080200_default-evaluate.md  202603080240_fix-topic-relevance-pipeline.md  202603080310_evaluation-axes-documentation.md  202603081218_multi-agent-evaluator.md  202603081500_overview-evaluator.md  add-language-option-20260228.md  add-pptx-export-20260306.md  add-pptx-render-20260305.md  fix-pptx-pdf-japanese-path-20260306.md  fix-research-agent-tool-conflict.md  fix_jst_timezone.md  improvement-202603010219.md  pipeline-subcommands-20260305.md  (+1 more)
scripts/: analyze_evaluations.py
(+22 files in other folders)
